--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,11 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-/*--------Base Header - Footer Styles------*/
+   .content-wrapper {
+    width: 90%;
+    margin: 50px 0;
+  }
+ /*--------Base Header - Footer Styles------*/
 header, footer {
   display: flex;
   justify-content: center;
@@ -94,11 +98,22 @@ header, footer {
   flex-flow: row wrap;
 }
 
+header {
+  padding: 15px 0;
+}
+
 header .content-wrapper {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-flow: row wrap;
+  margin: 0;
+}
+
+.header-divider {
+  width: 100%;
+  height: 1px;
+  margin: 10px 0 20px 0;
 }
 
 header nav {
@@ -106,11 +121,26 @@ header nav {
   justify-content: space-around;
   align-items: center;
   flex-flow: row wrap;
+  width: 60%;
 }
 
 header nav ul {
   display: flex;
   justify-content: space-around;
+  width: 100%;
+}
+
+footer {
+  flex-direction: column;
+}
+
+footer .content-wrapper {
+  width: 55%;
+  margin: 50px 0;
+}
+
+footer .contact {
+margin-bottom: 50px;
 }
 
 footer .social-icons {
@@ -125,6 +155,9 @@ footer .social-icons p {
   align-items: center;
 }
 
+footer .copyright {
+  margin: 20px 0;
+}
 
 /*--------- Mobile Styles - Homepage-----*/
 
@@ -154,12 +187,40 @@ aside {
   flex-flow: row wrap;
 }
 
+.features {
+  display: flex;
+  justify-content: center;
+  flex-flow: row wrap;
+}
+
+.features h2 {
+  margin-bottom: 60px;
+}
+
+.features article {
+  width: 60%;
+  margin: 30px 0;
+}
+
+.features p {
+  margin: 0;
+}
+
 /*Reviews*/
 
 .reviews {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+}
+
+.reviews h2 {
+  margin-bottom: 40px;
+}
+
+.reviews h3 {
+  width: 55%;
+  margin: 20px 0;
 }
 
 /*----------ABOUT PAGE------*/
@@ -177,6 +238,10 @@ aside {
   flex-flow: row wrap;
 }
 
+.contact-content p {
+  margin: 0;
+}
+
 /*--------FAQ PAGE---------*/
 .faq {
   display: flex;
@@ -189,6 +254,16 @@ aside {
   display: flex;
   justify-content: center;
   flex-flow: row wrap;
+  margin: 50px 0 0 0;
+  display: flex;
+}
+
+.faq h2 {
+  margin-bottom: 40px;
+}
+
+.faq-content {
+  margin-bottom: 50px;
 }
 
 
