--- a/css/main.css
+++ b/css/main.css
@@ -593,6 +593,11 @@ input[type=button] {
     margin: 0;
   }
 
+  .features i {
+    font-size: 3.75em;
+    margin-bottom: 40px;
+  }
+
   /*Footer*/
   footer .content-wrapper {
     width: 65%;
