--- a/css/main.css
+++ b/css/main.css
@@ -102,6 +102,7 @@ textarea {
    ul,
    ol {
     list-style-type: none;
+    margin: 0;
 
    }
 
@@ -115,6 +116,7 @@ textarea {
     font-family: 'Poppins', sans-serif;
     font-size: 1.875em;
     font-weight: 500;
+    margin: 0;
    }
 
    h3,
@@ -531,6 +533,10 @@ input[type=button] {
     justify-content: space-between;
   }
 
+  header figure {
+    width: 30%;
+  }
+
   header nav {
     width: 20%;
   }
@@ -592,7 +598,8 @@ input[type=button] {
     width: 85%;
   }
 
-  .reviews article div {
+  .reviews article div,
+  .reviews article figure {
     width: 49%;
   }
 
@@ -668,7 +675,7 @@ input[type=button] {
     font-size: 1.5em;
   }
 
-.map figure {
+  .map figure {
   padding-bottom: 45.5%;
 }
 
